v5.6.1
- Updated - core/latest-posts remove textColor from post-excerpt
- Updated - remove textColor from default patterns
- Updated - local translations
- Fixed - core/navigation and core/navigation-submenu styles

v5.6.0
- Updated - core/button default CSS update to remove outline (Outline registered using register_block_style)
- Fixed - register_block_style to init instead of wp_enqueue_scripts hooks 

v5.5.9
- Fixed - Corectly overwrite core styles using wp_enqueue_scripts hook
- Fixed - Issue with core/pages not enqueueing submenu styles when used in navigation block

v5.5.8
- Updated - Revert entry-meta pattern post-author-name to post-author (as it will not land in WP 6)
- Updated - core/latest-comments add isLink (false) attribute to render pattern
- Updated - Commnents template remove date format to use default / add isLink (false)
- Updated - Blocks to cache and load dynamic CSS via wp_enqueue_block_style
- Updated - column classes to utilities from base CSS (loaded on demand)
- Updated - offset classes to utilities from base CSS (loaded on demand)
- Updated - core/media-text CSS moved from flex to grid
- Updated - core/navigation (and child blocks) assets loading optimization and code splitting
- Updated - core/cover to use the featured image (inline CSS + placeholder support)
- Updated - core/post-featured-image style improvements (deprecated .ratio class in favor of modifier)
- Updated - core/comment-template intro to match upcoming core/comments-title block
- Updated - core/table inline CSS generation (border control)
- Updated - single.html and core/latest-comments to use core/avatar block
- Updated - removed unnecessary nav wrapper on pagination-numbers block (it has been added into WP core)
- Fixed - Utilitites to properly order CSS (based on breakpoints) when generating inline styles
- Fixed - core/embed styles
- Fixed - wecodeart/filter/gutenberg/styles/element - incorect filter ussage 